# synapse-skills

./: .gitignore  CONTEXT.md  LICENSE  MIGRATION.md  README.md  pyproject.toml  synapse_audit_report.md
.agent/workflows/: activate-skills.md  recall-sessions.md  skill-health.md  update-synapse.md
.github/workflows/: ci.yml  publish.yml
data/: bundles.json  skills_sources.json
synapse/: __init__.py  cli.py  config.py  distill.py  embeddings.py  groove.py  memory.py  profiles.py  router.py  setup.py  tokenizer.py
templates/: GEMINI_RULES.md  master-memory.md
tests/: test_embeddings.py  test_groove.py  test_router_hybrid.py  test_setup.py
