[project]
name = "synapse-skills"
version = "3.0.0-alpha.1"
description = "Universal AI skill routing for every coding agent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "nzkbuild"}]
keywords = ["ai", "skills", "routing", "coding", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
embeddings = ["onnxruntime", "numpy"]
dev = ["pytest", "ruff"]

[project.scripts]
synapse = "synapse.cli:main"

[project.urls]
Homepage = "https://github.com/nzkbuild/synapse-skills"
Repository = "https://github.com/nzkbuild/synapse-skills"
Issues = "https://github.com/nzkbuild/synapse-skills/issues"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
